wp-content/themes/hestia-child/style.css
/*
Theme Name:   Rewa Gaudern Financial Freedom
Description:  Financial Coaching Hestia Child Theme
Author:       Virginia Estes
Author URI:   http://codelovely.com
Template:     hestia
Version:      1.0.0
License:      GNU General Public License v2 or later
License URI:  http://www.gnu.org/licenses/gpl-2.0.html
Tags:         light, dark, two-columns, right-sidebar, responsive-layout, accessibility-ready
Text Domain:  hestiachild
*/

#carousel-hestia-generic > div > div > div > div > div.header-filter {
  background-size: cover;
  background-repeat: no-repeat;
  background-color: #3f1651;
  image-rendering: -webkit-optimize-contrast;
}

.header-filter::before {
  background-color: rgba(0, 0, 0, 0.4);
}

div.hestia-features-content {
  color: pink;
}

.section-image:after {
  background-color: rgba(0, 0, 0, 0.25);
}

